--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,9 @@
 
     <string name="app_name">Geolarm</string>
     <string name="title_activity_maps">Map</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="set_new_alarm">Neuen Wecker stellen</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Abbrechen</string>
 
 </resources>
