--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Geolarm</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">Geolarm</string>
     <string name="choose_alarm_distance">Entfernung</string>
     <string name="ok">OK</string>
     <string name="cancel">Abbrechen</string>
@@ -18,5 +18,6 @@
     <string name="settings">Einstellungen</string>
     <string name="shutdown_alarm">Alarm ausschalten</string>
     <string name="show_list">Liste anzeigen</string>
+    <string name="title_activity_splash_screen">Starte Geolarm</string>
 
 </resources>
